# energy_solar

./: .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml  deploy-aws-ec2.yml
api/: __init__.py  errors.py  exceptions.py  models.py  routes.py  schemas.py
api/services/: plant_service.py
deploy/aws/: ec2-bootstrap.sh  hardening.md  provisioning.md  rollback.sh  smoke-test.sh
deploy/nginx/: energy-solar.conf  setup_tls.sh
instance/: local.db
k8s/: configmap.yaml  postgres-deployment.yaml  secret.yaml  web-deployment.yaml  web-service.yaml
migrations/versions/: 2088a05121e5_create_plants_table.py
static/: app.js  style.css
templates/: index.html
tests/: test_api.py
