[tool.poetry]
name = "processo-energy-solar"
version = "0.1.0"
description = ""
authors = ["mielesantos <mielesnts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.3"
sqlalchemy = "^2.0.49"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.12"
python-dotenv = "^1.2.2"
marshmallow = "^4.3.0"
flask-marshmallow = "^1.5.0"
ruff = "^0.15.12"
pytest = "^9.0.3"
marshmallow-sqlalchemy = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
